Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15741

Wrong drag & drog behavior in QListView in Icon mode

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.1
    • 4.6.0
    • Widgets: Itemviews
    • None
    • Windows XP, Qt 4.7.0, MSVC2008
    • a90485dd01bd6c067bf977cb30604032352da6be

    Description

      In Qt 4.6 defaultDropAction property in QAbstractItemView was intoduced. But QListView in icon mode uses its own realisation of startDrag(Qt::DropActions supportedActions) that calls QIconModeViewBase::filterStartDrag(Qt::DropActions supportedActions) function where this property isn't used.
      QDrag::exec() is called with Qt::CopyAction.

      Attachments

        1. listviewTest.zip
          1 kB
        2. listviewTest.zip
          0.7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sgaist Samuel Gaist
            paullo Pavel Golikov
            Votes:
            3 Vote for this issue
            Watchers:
            8 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes