Make use of defaultDropAction in QListView icon mode

Before this patch, using setDefaultDropAction on QListView in icon mode
would not have any effect. Now the drag behaves properly.

The default action is set to CopyAction rather than IgnoreAction to
keep the current behavior and avoid breaking user code.

[ChangeLog][QtWidgets][QListWidget] Fixed a bug that caused
the default drop action to be ignored when using icon mode.

Task-number: QTBUG-15741
Change-Id: I49654cde382af344ffc4594699303c928e27e05d
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>